# dbp-task-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/: admin.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_rename_due_to_task_deadline_at.py  0004_tag_created_at_tag_updated_at_user_created_at_and_more.py
main/models/: __init__.py  base.py  tag.py  task.py  user.py
main/tests/: test_admin.py
task_manager/: settings.py  urls.py
