[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Artem Basalaev", "dbp"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
